# learn-opengl

./: CMakeLists.txt  README.md
src/1.getting_started/1.2.hello_window_clear/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  mainwindow.ui
src/1.getting_started/2.2.hello_triangle_indexed/: CMakeLists.txt  glwidget.cpp  glwidget.h  hello_triangle_indexed.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
